--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,12 @@ dependencies = [
   "importlib-metadata>=4.0; python_version < '3.8'",
 ]
 
+[project.optional-dependencies]
+notebook = [
+  "ipykernel",
+  "ipywidgets<8",
+]
+
 [project.urls]
 Repository = "https://github.com/nanohub/submit"
 
